--- a/HamLT Quiz/Base.lproj/MainMenu.xib
+++ b/HamLT Quiz/Base.lproj/MainMenu.xib
@@ -17,52 +17,27 @@
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
-        <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
-        <customObject id="39M-5o-YiB" customClass="MainViewController" customModule="Radijo_me_ge_jas" customModuleProvider="target">
+        <customObject id="0Ge-3A-A4p" customClass="MainViewController" customModule="Radijo_me_ge_jas" customModuleProvider="target">
             <connections>
-                <outlet property="mainView" destination="W5f-gP-zax" id="p2s-OW-XvU"/>
-                <outlet property="view" destination="EiT-Mj-1SZ" id="h6S-Ff-vD6"/>
+                <outlet property="mainView" destination="W5f-gP-zax" id="dUc-qj-Xd1"/>
+                <outlet property="view" destination="EiT-Mj-1SZ" id="zmy-MQ-rM8"/>
             </connections>
         </customObject>
+        <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
                 <menuItem title="HamLT Quiz" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="HamLT Quiz" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About" id="5kV-Vb-QxS">
+                            <menuItem title="Apie" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
-                            <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW"/>
-                            <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
-                            <menuItem title="Services" id="NMo-om-nkz">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
-                            </menuItem>
-                            <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide HamLT Quiz" keyEquivalent="h" id="Olw-nP-bQN">
-                                <connections>
-                                    <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem title="Hide Others" keyEquivalent="h" id="Vdr-fp-XzO">
-                                <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
-                                <connections>
-                                    <action selector="hideOtherApplications:" target="-1" id="VT4-aY-XCT"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem title="Show All" id="Kd2-mp-pUS">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="unhideAllApplications:" target="-1" id="Dhg-Le-xox"/>
-                                </connections>
-                            </menuItem>
-                            <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit HamLT Quiz" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Baigti" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
@@ -79,17 +54,27 @@
             <rect key="contentRect" x="335" y="390" width="600" height="500"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
             <value key="minSize" type="size" width="600" height="500"/>
+            <value key="maxSize" type="size" width="600" height="500"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
-                <autoresizingMask key="autoresizingMask"/>
+                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W5f-gP-zax">
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="W5f-gP-zax">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="600" id="HV2-3p-06l"/>
+                            <constraint firstAttribute="height" constant="500" id="IEj-Ge-sjK"/>
+                        </constraints>
                     </customView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="W5f-gP-zax" secondAttribute="trailing" id="4Cg-nY-pzq"/>
+                    <constraint firstItem="W5f-gP-zax" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="Iwh-aK-SDy"/>
+                    <constraint firstItem="W5f-gP-zax" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="V8x-k5-x9v"/>
+                    <constraint firstAttribute="bottom" secondItem="W5f-gP-zax" secondAttribute="bottom" id="efZ-nc-yAw"/>
+                </constraints>
             </view>
-            <point key="canvasLocation" x="34" y="445"/>
+            <point key="canvasLocation" x="45" y="426.5"/>
         </window>
     </objects>
 </document>
