--- a/HamLT Quiz/MainViewController.xib
+++ b/HamLT Quiz/MainViewController.xib
@@ -14,12 +14,8 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
-            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
         </customView>
-        <customObject id="tkt-yS-pBs" customClass="MainViewController" customModule="Radijo_me_ge_jas" customModuleProvider="target">
-            <connections>
-                <outlet property="view" destination="Hz6-mo-xeY" id="JII-qV-69t"/>
-            </connections>
-        </customObject>
+        <customObject id="tkt-yS-pBs" customClass="MainViewController" customModule="Radijo_me_ge_jas" customModuleProvider="target"/>
     </objects>
 </document>
