--- a/HamLT Quiz/Base.lproj/MainMenu.xib
+++ b/HamLT Quiz/Base.lproj/MainMenu.xib
@@ -26,9 +26,9 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="HamLT Quiz" id="1Xt-HY-uBw">
+                <menuItem title="Radijo mėgėjas" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="HamLT Quiz" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="Radijo mėgėjas" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
                             <menuItem title="Apie" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
@@ -52,7 +52,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="600" height="500"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1366" height="745"/>
             <value key="minSize" type="size" width="600" height="500"/>
             <value key="maxSize" type="size" width="600" height="500"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
